--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <p>Taiwo Ogunleye, see results in the console, and source code in main.js file</p>
     <script src="./main.js"></script>
 </body>
 
