feat: add credentials

--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Hacking-NASSA-with-HTML Vyacheslav Plekhanov">
+    <meta property="og:url" content="https://hacking-nassa-with-html.github.io/js_exercise_to_help_Taiwo_Ogunleye/" />
+    <meta property="og:title" content="JavaScript exercise to help Taiwo Ogunleye" />
+    <meta property="og:description" content="JavaScript exercises" />
+    <meta property="og:image"
+        content="https://hacking-nassa-with-html.github.io/js_exercise_to_help_Taiwo_Ogunleye/FB_open_graph_1200x630_image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="en" />
+    <meta property="og:type" content="website" />
+    <meta property="fb:app_id" content="842172082628945" />
+    <meta property="og:image"
+        content="https://hacking-nassa-with-html.github.io/js_exercise_to_help_Taiwo_Ogunleye/whatsapp_OG_400x400_image.jpg">
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="400" />
     <title>js exercise to help Taiwo Ogunleye</title>
     <link rel="icon" href="./magnifying-glass.ico" />
 </head>
