feat: add stylings

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     <meta property="og:image:height" content="400" />
     <title>js exercise to help Taiwo Ogunleye</title>
     <link rel="icon" href="./magnifying-glass.ico" />
+    <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
+<body id="body">
     <p>Taiwo Ogunleye, see results in the console, and source code in main.js file</p>
     <script src="./main.js"></script>
 </body>
