feat: add clarification

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body id="body">
-    <p>Taiwo Ogunleye, see results in the console, and source code in main.js file</p>
+    <p>Taiwo Ogunleye, see results in the console, and source code in main.js file and README.md</p>
     <script src="./main.js"></script>
 </body>
 
