--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
     <meta property="og:title" content="JavaScript exercise to help Taiwo Ogunleye" />
     <meta property="og:description" content="JavaScript exercises" />
     <meta property="og:image"
-        content="https://hacking-nassa-with-html.github.io/js_exercise_to_help_Taiwo_Ogunleye/FB_open_graph_1200x630_image.jpg" />
+        content="https://hacking-nassa-with-html.github.io/js_exercise_to_help_Taiwo_Ogunleye/assets/img/FB_open_graph_1200x630_image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="en" />
     <meta property="og:type" content="website" />
     <meta property="fb:app_id" content="842172082628945" />
     <meta property="og:image"
-        content="https://hacking-nassa-with-html.github.io/js_exercise_to_help_Taiwo_Ogunleye/whatsapp_OG_400x400_image.jpg">
+        content="https://hacking-nassa-with-html.github.io/js_exercise_to_help_Taiwo_Ogunleye/assets/img/whatsapp_OG_400x400_image.jpg">
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
     <title>js exercise to help Taiwo Ogunleye</title>
-    <link rel="icon" href="./magnifying-glass.ico" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./assets/img/magnifying-glass.ico" />
+    <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
 
 <body id="body">
     <p>Taiwo Ogunleye, see results in the console, and source code in main.js file and README.md</p>
-    <script src="./main.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
